# rust-study

closures/src/: main.rs
iterator/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main-1.0.rs  main.rs
my-project1/: Cargo.toml
my-project1/restaurant/: Cargo.toml
my-project1/restaurant/src/: lib.rs  main.rs  modules.rs
my-project1/src/: main.rs
rust_study_14/first_release_cfg/: Cargo.toml
rust_study_14/first_release_cfg/src/: main.rs
rust_study_14/second_release_cfg_crates_io/: Cargo.toml
rust_study_14/second_release_cfg_crates_io/src/: lib.rs  lib1.rs  main.rs
rust_study_14/workspaces/: Cargo.toml
rust_study_14/workspaces/add-one/: Cargo.toml
rust_study_14/workspaces/adder/: Cargo.toml
rust_study_15/Box/src/: main.rs
rust_study_15/Deref/: Cargo.toml
rust_study_15/Deref/src/: main.rs
rust_study_15/Drop/: Cargo.toml
rust_study_15/rc_refcell_test/: Cargo.toml
rust_study_15/rc_test/: Cargo.toml
rust_study_16/on_message/: Cargo.toml
rust_study_16/state_share/: Cargo.toml
rust_study_17/Object/: Cargo.toml
rust_study_17/oop_design_patterns/: Cargo.toml
rust_study_17/trait_obj/: Cargo.toml
src/: main.rs  main1.rs  main2.rs  main3.rs  main4.rs  main5.rs
test_idea/: Cargo.toml
test_iterator_performance/: Cargo.toml
test_iterator_performance/src/: main.rs
tst-panic/: Cargo.toml  hello.txt
tst-panic/src/: main.rs
tst_trait/: Cargo.toml
tst_trait/diffrent_lifetimes/: Cargo.toml
tst_trait/src/: lib.rs  main.rs
tst_trait/struct_lifetimes/: Cargo.toml
unit_test_progream/: Cargo.toml
unit_test_progream/src/: main.rs
(+41 files in other folders)
